<resources>
    <string name="app_name">Artisan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="real_native_admob_add_id">"ca-app-pub-2578519456532696/6949357748"</string>
    <string name="test_native_admob_add_id">"ca-app-pub-3940256099942544/2247696110"</string>
    <string name="real_banner_admob_add_id">ca-app-pub-2578519456532696/3760997751</string>
    <string name="real_admob_app_id">ca-app-pub-2578519456532696~5952054626</string>
    <string name="real_app_open_add_id">ca-app-pub-2578519456532696/5352811837</string>

    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="category">Categories</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="messages">Messages</string>
    <string name="exit_prompt">Exit Artisan</string>
    <string name="business_images">Business Images</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="Inbox">inbox</string>
    <string name="username">Username</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="ok">OK</string>
    <string name="upload">Upload</string>
    <string name="instagram_url">Instagram Url</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="other_link">Other Link</string>
    <string name="business_advert_2">Business Advert #2</string>
    <string name="business_advert_1">Business Advert #1</string>
    <string name="business_advert_3">Business Advert #3</string>
    <string name="business_advert_4">Business Advert #4</string>
    <string name="business_advert_5">Business Advert #5</string>
    <string name="delete">Delete</string>
    <string name="business_logo">Business Logo</string>
    <string name="menu_item_share_plant" translation_description="The label for the Share menu item">Share</string>


    <!--    For flutterwave-->
    <string name="accept_card_payments">Accept Card payments</string>
    <string name="accept_account_payments">Accept Account payments</string>
    <string name="email">Email</string>
    <string name="amount_to_charge_required">Amount to charge (required)</string>
    <string name="public_key">Public key</string>
    <string name="amount_to_charge_defaults_to_50">Amount to charge (defaults to ₦50)</string>
    <string name="txref_required">txRef (required)</string>
    <string name="narration">Narration</string>
    <string name="currency_code_e_g_ngn">Currency code e.g. NGN</string>
    <string name="country_code_e_g_ng">Country code e.g. NG</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="start_payment">START PAYMENT</string>
    <string name="secret_key">Secret Key</string>
    <string name="encryption_key">Encryption key</string>
    <string name="francophone">Accept Franc Mobile Money Payments</string>
    <string name="uk_bank">Accept UK Bank Payments</string>
    <string name="sa_bank">Accept South Africa Bank Payments</string>
    <string name="live">Live</string>
    <string name="bank_transfer">Accept Bank Transfer Payments</string>
    <string name="zambia">Accept ZM Mobile money payments</string>
    <string name="rwanda">Accept RWF Mobile money payments</string>
    <string name="uganda">Accept UG Mobile money payments</string>
    <string name="ghana">Accept GH Mobile money payments</string>
    <string name="staging">Show Staging Label</string>
    <string name="ach">Accept ACH payments</string>
    <string name="should_display_fee">Should Display Fee</string>
    <string name="mpesa">Accept Mpesa payments</string>
    <string name="pre_auth_charge">Pre Auth Charge</string>
    <string name="add_subaccounts">Add subaccounts</string>
    <string name="current_vendor">Your current vendor refs are:</string>
    <string name="add_vendor">ADD VENDOR</string>
    <string name="clear">CLEAR</string>
    <string name="accept_ussd_payments">Accept USSD Payments</string>
    <string name="accept_barter_payments">Accept Barter Payments</string>
    <string name="allow_saved_cards">Allow saved cards</string>
    <string name="telegram_url">Telegram Link</string>
    <string name="whatsapp_url">WhatsApp Link</string>
    <string name="business_name">Enter Business Name</string>
    <string name="business_advert">Enter Business Advert</string>
    <string name="submit">Submit</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Artisan</string>
    <string name="seen">seen</string>
    <string name="other">Other</string>
    <string name="log_out">Log Out</string>
    <string name="user">User</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIgn In</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="place_order">Place Order</string>
    <string name="order_list">Order List</string>
    <string name="request">Request</string>
    <string name="verify_email_address">Verify Email Address:</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_image">Select Image</string>
    <string name="type_description">Description</string>
    <string name="show_or_hide_profile">Set Profile as Seller</string>
    <string name="last_message">Last Message</string>
    <string name="click_to_view_comment">Click to view comments</string>
    <string name="select_country">Select Country</string>
    <string name="plan">Plan</string>
    <string name="advert_image">Advert Image</string>
    <string name="subscription">Subscription</string>
    <string name="manage_account">Manage Account</string>
    <string name="terms">Click to agree with terms and condition</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="check_agree">Click to agree with</string>

    <string name="app_version">Version 1.0.1</string>
    <string name="share">Share</string>
    <string name="support_mail">helpingartisan@gmail.com</string>
</resources>