<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tostech.artisan.ui.artisanlist.BusinessListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_artisan_list" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.tostech.artisan.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.tostech.artisan.ui.order.OrderFragment"
        android:label="@string/order_list"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.tostech.artisan.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.tostech.artisan.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_profile2"
        android:name="com.tostech.artisan.Profile"
        android:label="@string/profile"
        tools:layout="@layout/profile" />

    <fragment
        android:id="@+id/nav_advert_image"
        android:name="com.tostech.artisan.Pictures"
        android:label="@string/advert_image"
        tools:layout="@layout/logo" />

    <fragment
        android:id="@+id/nav_subscribe"
        android:name="com.tostech.artisan.Subscription"
        android:label="@string/subscription"
        tools:layout="@layout/subscription" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.tostech.artisan.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.tostech.artisan.ui.messages.MessagesFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/nav_exit"
        android:name="com.tostech.artisan.MainActivity"
        android:label="@string/exit"
        tools:layout="@layout/fragment_exit" />
</navigation>