<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<ScrollView
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/verifyMailSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_address"
            android:checked="false"
            android:textStyle="italic"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/changePassSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/verifyMailSwitch"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/verifyMailSwitch"
            app:layout_constraintTop_toBottomOf="@id/verifyMailSwitch" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showHideSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/show_or_hide_profile"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/changePassSwitch"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/changePassSwitch"
            app:layout_constraintTop_toBottomOf="@id/changePassSwitch" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>